--- a/sunnyside-agency-landing-page/style.css
+++ b/sunnyside-agency-landing-page/style.css
@@ -124,6 +124,59 @@ h1 {
     padding: 8vw;
 }
 
+.testimonials {
+    padding: 6vw;
+    text-align: center;
+}
+
+.test_flex {
+    display: flex;
+    gap: 2em;
+    flex-wrap: wrap;
+}
+
+.col {
+    flex: 150px;
+    justify-content: center;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.col img {
+    width: 3em;
+    padding-block: 3em;
+    border-radius: 50%;
+}
+
+.name {
+    margin-top: 4em;
+    margin-bottom: 1em;
+    font-weight: 900;
+}
+
+.cherries, .orange {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding-inline: 10vw;
+}
+
+.section {
+    text-align: center;
+    margin-bottom: 8vw;
+    margin-inline: auto;
+    opacity: 0.7;
+    font-weight: 500;
+}
+
+.section h3 {
+    margin-bottom: 2vw;
+}
+
+.section p {
+    font-size: 1rem;
+}
+
 footer {
     background-color: hsl(168, 34%, 41%);
     height: 15em;
@@ -191,10 +244,23 @@ footer {
 }
 
 
-/* Text design */
+/* Text styling */
+
+p:not(.name) {
+    font-family: 'Barlow';
+}
 
 h1, .contact_button, a, h4 {
     text-transform: uppercase;
+}
+
+h4 {
+    color: rgb(0,0,0,0.5);
+    letter-spacing: 4px;
+}
+
+.position {
+    color: rgb(0,0,0,0.6);
 }
 
 /* Links */
