--- a/sunnyside-agency-landing-page/style.css
+++ b/sunnyside-agency-landing-page/style.css
@@ -40,6 +40,15 @@
     --dark-graish-blue: hsl(232, 10%, 55%);
     --graish-blue: hsl(210, 4%, 67%);
     --white: hsl(0, 0%, 100%);
+
+    --fs--2: clamp(0.7035rem, 0.8184rem + -0.1415vi, 0.7901rem);
+    --fs--1: clamp(0.8889rem, 0.8729rem + 0.0797vi, 0.9377rem);
+    --fs-0: clamp(1rem, 0.9184rem + 0.4082vi, 1.25rem);
+    --fs-1: clamp(1.125rem, 0.9483rem + 0.8837vi, 1.6663rem);
+    --fs-2: clamp(1.2656rem, 0.9536rem + 1.56vi, 2.2211rem);
+    --fs-3: clamp(1.4238rem, 0.922rem + 2.5092vi, 2.9607rem);
+    --fs-4: clamp(1.6018rem, 0.8361rem + 3.8283vi, 3.9467rem);
+    --fs-5: clamp(1.802rem, 0.6726rem + 5.6471vi, 5.2609rem);
 }
 
 @font-face {
@@ -58,6 +67,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    transition: all .25s ease-out;
 }
 
 body {
@@ -71,6 +81,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center bottom;
+    background-attachment: fixed;
 }
 
 .header {
@@ -88,6 +99,10 @@ body {
     width: 80%;
 }
 
+.selector {
+    display: none;
+}
+
 ul {
     display: flex;
     gap: 2em;
@@ -103,11 +118,13 @@ li {
     cursor: pointer;
 }
 
-h1 {
-    text-align: center;
-    color: #fff;
-    letter-spacing: 4px;
-    word-spacing: 4px;
+li:not(.contact_button):hover, li:not(.contact_button):focus {
+   border-bottom: 2px solid white;
+   color: #fff;
+}
+
+.bottom_nav li:hover, .bottom_nav li:focus {
+    border-bottom: none;
 }
 
 .grid {
@@ -122,6 +139,10 @@ h1 {
 
 .transform, .stand_out {
     padding: 8vw;
+}
+
+.transform > *, .stand_out > * {
+    margin-bottom: 4vw;
 }
 
 .testimonials {
@@ -212,6 +233,10 @@ footer {
     opacity: 0.7;
 }
 
+.share_links > *:hover, .share_links > *:focus {
+    fill: white;
+}
+
 /* Images */
 
 .image {
@@ -243,7 +268,6 @@ footer {
     grid-template-columns: repeat(4, 1fr);
 }
 
-
 /* Text styling */
 
 p:not(.name) {
@@ -254,13 +278,71 @@ h1, .contact_button, a, h4 {
     text-transform: uppercase;
 }
 
-h4 {
-    color: rgb(0,0,0,0.5);
+h1 {
+    text-align: center;
+    color: #fff;
     letter-spacing: 4px;
+    word-spacing: 4px;
+    font-size: var(--fs-5);
+}
+
+h2 {
+    font-size: var(--fs-4);
+    font-weight: 900;
+    color: var(--dark-des-blue);
+}
+
+h3 {
+    font-size: var(--fs-3);
+}
+
+h4 {
+    font-size: var(--fs-2);
+    color: hsla(212, 27%, 19%, 0.5);
+    letter-spacing: 4px;
+    word-wrap: break-word;
+}
+
+p {
+    font-size: var(--fs-0);
+    color: hsla(212, 27%, 19%, 0.7);
+    font-weight: 600;
+}
+
+a {
+    text-decoration: none;
+    color: hsl(212, 27%, 19%);
+    font-weight: 800;
+    position: relative;
+    padding: 0 4px; /* Space around text */
+}
+
+a::after {
+    content: '';
+    position: absolute;
+    left: -0.3rem;
+    right: -0.3rem; 
+    bottom: -0.3rem;
+    height: 0.6rem;
+    border-radius: 10px;
+    opacity: 0.4;
+  }
+
+.transform a::after {
+    background: hsl(51, 100%, 49%);
+}
+
+.stand_out a::after {
+    background: hsl(7, 99%, 70%);
+}
+
+a:hover::after, a:focus::after {
+    opacity: 1;
+    outline: none;
 }
 
 .position {
-    color: rgb(0,0,0,0.6);
+    color: hsla(212, 27%, 19%, 0.6);
 }
 
 /* Links */
@@ -271,6 +353,53 @@ h4 {
     padding: 1em 1.5em;
     background-color: #fff;
     border-radius: 20px;
+}
+
+.contact_button:hover, .contact_button:focus {
+    color: #fff;
+    background-color: rgb(255,255,255, 0.4);
+}
+
+/* Adjustment for small screens */
+
+@media screen and (max-width: 600px) {
+    .image .desktop {
+        display: none;
+    }
+    .image .mobile {
+        display: block;
+    }
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(6, 1fr);
+        grid-template-areas: 
+        "egg"
+        "transform"
+        "glass"
+        "stand_out"
+        "cherries"
+        "orange_bg";
+    }
+    .top_nav ul {
+        display: none;
+    }
+    .top_nav {
+        width: auto;
+    }
+    .selector {
+        display: block;
+        cursor: pointer;
+    }
+    .bottom_images {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .col img {
+        padding-block: 1em;
+    }
+    .name {
+        margin-top: 2em;
+    }
 }
 
 /* Grid areas */
