--- a/sunnyside-agency-landing-page/style.css
+++ b/sunnyside-agency-landing-page/style.css
@@ -70,6 +70,9 @@
     transition: all .25s ease-out;
 }
 
+html {
+    overflow-x: hidden;
+}
 body {
     font-size: 1.2rem;
     font-family: 'Fraunces';
@@ -96,6 +99,28 @@ body {
     height: 20%;
 }
 
+.collapsed-nav {
+    display: none;
+    position: absolute;
+    top: -30%;
+    left: 50%;
+    translate: -50%;
+    z-index: 3;
+    background-color: #fff;
+    width: calc(100% - 64px);
+}
+
+.collapsed-nav::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translateY(-100%);
+    border-left: 20px solid transparent;
+    border-right: 20px solid #fff; 
+    border-top: 20px solid transparent;
+}
+
 .top_nav {
     width: 80%;
 }
@@ -104,7 +129,7 @@ body {
     display: none;
 }
 
-ul {
+.main_ul {
     display: flex;
     gap: 2em;
     justify-content: flex-end;
@@ -113,6 +138,20 @@ ul {
     padding: 0;
     margin: 0;
     flex-wrap: wrap;
+}
+
+.secondary_ul {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    padding: 1em;
+    margin: 0;
+    color: hsla(212, 27%, 19%, 0.5);
+    font-weight: 700;
+    font-family: 'Barlow';
 }
 
 li {
@@ -126,6 +165,23 @@ li:not(.contact_button):hover, li:not(.contact_button):focus {
 
 .bottom_nav li:hover, .bottom_nav li:focus {
     border-bottom: none;
+}
+
+.collapsed-nav li:hover, .collapsed-nav li:focus {
+    border-bottom: none;
+    color: hsla(212, 27%, 19%, 0.3);
+}
+
+.heading-holder {
+    position: relative;
+}
+
+.arrow {
+    width: 3rem;
+    position: absolute;
+    top: 7rem;
+    left: 50%;
+    translate: -50%;
 }
 
 .grid {
@@ -221,6 +277,7 @@ footer {
     font-size: 0.8rem;
     opacity: 0.7;
 }
+
 
 .share_links {
     display: flex;
@@ -365,6 +422,16 @@ a:hover::after, a:focus::after {
     background-color: rgb(255,255,255, 0.4);
 }
 
+.secondary_ul .contact_button {
+    font-family: 'Fraunces';
+    background: hsl(51, 100%, 49%);
+}
+
+.secondary_ul .contact_button:hover, .secondary_ul .contact_button:focus {
+    background-color: hsla(51, 100%, 49%, 0.7);
+    color: hsl(212, 27%, 19%);
+}
+
 /* Additional classes to make the sections appear smoothly */
 
 .prehidden {
@@ -401,7 +468,7 @@ a:hover::after, a:focus::after {
         "cherries"
         "orange_bg";
     }
-    .top_nav ul {
+    .main_ul {
         display: none;
     }
     .top_nav {
@@ -420,6 +487,11 @@ a:hover::after, a:focus::after {
     .name {
         margin-top: 2em;
     }
+    .arrow {
+        width: 8vw;
+        top: 7rem;
+    }
+    
 }
 
 /* Grid areas */
