--- a/sunnyside-agency-landing-page/style.css
+++ b/sunnyside-agency-landing-page/style.css
@@ -79,7 +79,7 @@ body {
     overflow-x: hidden;
 }
 
-.preview {
+.header_bg {
     height: 30em;
     background-image: url(images/desktop/image-header.jpg);
     background-size: cover;
@@ -99,7 +99,7 @@ body {
     height: 20%;
 }
 
-.collapsed-nav {
+.mobile_nav {
     display: none;
     position: absolute;
     top: -30%;
@@ -110,7 +110,7 @@ body {
     width: calc(100% - 64px);
 }
 
-.collapsed-nav::after {
+.mobile_nav::after {
     content: '';
     position: absolute;
     top: 0;
@@ -121,15 +121,15 @@ body {
     border-top: 20px solid transparent;
 }
 
-.top_nav {
+.header_nav {
     width: 80%;
 }
 
-.selector {
+.mobile_logo {
     display: none;
 }
 
-.main_ul {
+.header_ul {
     display: flex;
     gap: 2em;
     justify-content: flex-end;
@@ -140,7 +140,7 @@ body {
     flex-wrap: wrap;
 }
 
-.secondary_ul {
+.mobile_ul {
     display: flex;
     flex-direction: column;
     gap: 1em;
@@ -158,7 +158,7 @@ li {
     cursor: pointer;
 }
 
-li:not(.contact_button):hover, li:not(.contact_button):focus {
+li:not(.contact_btn):hover, li:not(.contact_btn):focus {
    border-bottom: 2px solid white;
    color: #fff;
 }
@@ -167,12 +167,12 @@ li:not(.contact_button):hover, li:not(.contact_button):focus {
     border-bottom: none;
 }
 
-.collapsed-nav li:hover, .collapsed-nav li:focus {
+.mobile_nav li:hover, .mobile_nav li:focus {
     border-bottom: none;
     color: hsla(212, 27%, 19%, 0.3);
 }
 
-.heading-holder {
+.header_wrapper {
     position: relative;
 }
 
@@ -202,12 +202,12 @@ li:not(.contact_button):hover, li:not(.contact_button):focus {
     margin-bottom: 4vw;
 }
 
-.testimonials {
+.reviews {
     padding: 6vw;
     text-align: center;
 }
 
-.test_flex {
+.reviews_wrapper {
     display: flex;
     gap: 2em;
     flex-wrap: wrap;
@@ -336,7 +336,7 @@ p:not(.name) {
     font-family: 'Barlow';
 }
 
-h1, .contact_button, a, h4 {
+h1, .contact_btn, a, h4 {
     text-transform: uppercase;
 }
 
@@ -376,7 +376,7 @@ a {
     color: hsl(212, 27%, 19%);
     font-weight: 800;
     position: relative;
-    padding: 0 4px; /* Space around text */
+    padding: 0 4px;
 }
 
 a::after {
@@ -409,7 +409,7 @@ a:hover::after, a:focus::after {
 
 /* Links */
 
-.contact_button {
+.contact_btn {
     font-weight: 900;
     color: var(--dark-des-blue);
     padding: 1em 1.5em;
@@ -417,24 +417,24 @@ a:hover::after, a:focus::after {
     border-radius: 20px;
 }
 
-.contact_button:hover, .contact_button:focus {
+.contact_btn:hover, .contact_btn:focus {
     color: #fff;
     background-color: rgb(255,255,255, 0.4);
 }
 
-.secondary_ul .contact_button {
+.mobile_ul .contact_btn {
     font-family: 'Fraunces';
     background: hsl(51, 100%, 49%);
 }
 
-.secondary_ul .contact_button:hover, .secondary_ul .contact_button:focus {
+.mobile_ul .contact_btn:hover, .mobile_ul .contact_btn:focus {
     background-color: hsla(51, 100%, 49%, 0.7);
     color: hsl(212, 27%, 19%);
 }
 
 /* Additional classes to make the sections appear smoothly */
 
-.prehidden {
+.sliding {
     opacity: 0; 
     transition: opacity 1s ease-in-out, transform 1s ease-in-out;
 }
@@ -468,13 +468,13 @@ a:hover::after, a:focus::after {
         "cherries"
         "orange_bg";
     }
-    .main_ul {
+    .header_ul {
         display: none;
     }
-    .top_nav {
+    .header_nav {
         width: auto;
     }
-    .selector {
+    .mobile_logo {
         display: block;
         cursor: pointer;
     }
