--- a/sunnyside-agency-landing-page/style.css
+++ b/sunnyside-agency-landing-page/style.css
@@ -80,11 +80,11 @@ body {
 }
 
 .header_bg {
-    height: 30em;
+    height: 100vh;
     background-image: url(images/desktop/image-header.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center bottom;
+    background-position: bottom;
     background-attachment: fixed;
 }
 
@@ -473,6 +473,9 @@ a:hover::after, a:focus::after {
     }
     .header_nav {
         width: auto;
+    }
+    .header_bg {
+        background-image: url(images/mobile/image-header.jpg);
     }
     .mobile_logo {
         display: block;
