--- a/etch-a-sketch/style.css
+++ b/etch-a-sketch/style.css
@@ -23,7 +23,7 @@ body {
 .wrapper {
     padding: 0.5rem;
     margin: 0;
-    width: clamp(10rem, 80%, 30rem);
+    width: clamp(160px, 80%, 600px);
     border-radius: 10px;
     border: 1.5px solid rgb(146, 18, 18);
     box-shadow: 
