--- a/etch-a-sketch/style.css
+++ b/etch-a-sketch/style.css
@@ -1,3 +1,20 @@
+:root {
+    --gradient-wrapper: linear-gradient(to bottom right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.15) 30%, rgba(0, 0, 0, 0.15) 100%), linear-gradient(to bottom right, #B91325 0%, #B71326 50%);
+    --gradient-body: linear-gradient(to right, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.25) 30%, rgba(0, 0, 0, 0.25) 70%, rgba(0, 0, 0, 0.5) 100%);
+    --gradient-panel: linear-gradient(to bottom right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.15) 30%, rgba(0, 0, 0, 0.15) 100%);
+    --shadown-wrapper: 4px 4px 6px rgba(0,0,0,0.8),
+    inset 3px 3px 5px rgba(255, 255, 255, 0.7),
+    inset -3px -3px 5px rgba(0, 0, 0, 0.7);
+    --shadown-subwrapper: -2px -2px 1px rgba(0,0,0, 0.4),
+    2px 2px 1px rgba(0,0,0, 0.4);
+    --shadow-subscreen: -5px -5px 5px rgba(0,0,0, 0.7),
+    5px 5px 5px rgba(255,255,255, 0.7);
+    --text-shadow: -1px -1px 1px #aaa,
+    0px 2px 1px rgba(0,0,0,0.5),
+    2px 2px 1px rgba(0,0,0,0.7),
+    0px 0px 1px rgba(0,0,0,0.4);
+}
+
 @font-face {
     font-family: 'Kaushan Script';
     src: url(fonts/KaushanScript-Regular.ttf);
@@ -16,8 +33,7 @@ body {
     align-items: center;
     min-height: 100vh;
     background-color: #A5ADBF;
-    background-image: 
-    linear-gradient(to right, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.25) 30%, rgba(0, 0, 0, 0.25) 70%, rgba(0, 0, 0, 0.5) 100%);
+    background-image: var(--gradient-body);
 }
   
 .wrapper {
@@ -26,12 +42,8 @@ body {
     width: clamp(160px, 80%, 600px);
     border-radius: 10px;
     border: 1.5px solid rgb(146, 18, 18);
-    box-shadow: 
-    4px 4px 6px rgba(0,0,0,0.8),
-    inset 3px 3px 5px rgba(255, 255, 255, 0.7),
-    inset -3px -3px 5px rgba(0, 0, 0, 0.7);
-    background-image: 
-        linear-gradient(to bottom right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.15) 30%, rgba(0, 0, 0, 0.15) 100%), linear-gradient(to bottom right, #B91325 0%, #B71326 50%);
+    box-shadow: var(--shadown-wrapper);
+    background-image: var(--gradient-wrapper);
     background-position: top left;
 }
 
@@ -40,9 +52,7 @@ body {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr auto;
     border-radius: inherit;
-    box-shadow:
-    -2px -2px 1px rgba(0,0,0, 0.4),
-    2px 2px 1px rgba(0,0,0, 0.4);
+    box-shadow: var(--shadown-subwrapper);
 }
 
 .screen_wrapper {
@@ -59,9 +69,7 @@ body {
     border-radius: inherit;
     height: 100%;
     background-color: #fff;
-    box-shadow:
-    -5px -5px 5px rgba(0,0,0, 0.7),
-    5px 5px 5px rgba(255,255,255, 0.7);
+    box-shadow: var(--shadow-subscreen);
 }
 
 .panel {
@@ -80,10 +88,7 @@ h1 {
     margin-block: 1vw;
     letter-spacing: 0.5vmin;
     color: #F8F6C6;
-    text-shadow: -1px -1px 1px #aaa,
-    0px 2px 1px rgba(0,0,0,0.5),
-    2px 2px 1px rgba(0,0,0,0.7),
-    0px 0px 1px rgba(0,0,0,0.4);
+    text-shadow: var(--text-shadow);
 }
 
 .panel > * {
@@ -94,18 +99,11 @@ h1 {
     padding: 0.5vw 1vw;
     margin: 0;
     background-color: #B91325;
-    text-shadow: -1px -1px 1px #aaa,
-    0px 2px 1px rgba(0,0,0,0.5),
-    2px 2px 1px rgba(0,0,0,0.7),
-    0px 0px 2px rgba(0,0,0,0.4);
+    text-shadow: var(--text-shadow);
     border-radius: 10px;
     border: 1.5px solid rgb(146, 18, 18);
-    box-shadow: 
-    4px 4px 6px rgba(0,0,0,0.8),
-    inset 3px 3px 5px rgba(255, 255, 255, 0.7),
-    inset -3px -3px 5px rgba(0, 0, 0, 0.7);
-    background-image: 
-        linear-gradient(to bottom right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.15) 30%, rgba(0, 0, 0, 0.15) 100%);
+    box-shadow: var(--shadown-wrapper);
+    background-image: var(--gradient-panel);
     background-position: top left;
 }
 
