--- a/calculator-app/style.css
+++ b/calculator-app/style.css
@@ -52,7 +52,7 @@
 }
 
 @font-face {
-    font-family: 'League Spartan Regular';
+    font-family: 'League Spartan Semi-Bold';
     src: url(fonts/LeagueSpartan-SemiBold.ttf);
 }
 
@@ -122,7 +122,7 @@ body {
     width: 98%;
     color: var(--text2-theme1);
     border: none;
-    font-family: 'League Spartan Regular';
+    font-family: 'League Spartan Semi-Bold';
 }
 
 .panel {
