--- a/calculator-app/style.css
+++ b/calculator-app/style.css
@@ -48,6 +48,14 @@
     --box-sh-dk-yellow: -1px 1px 0 var(--key-shadow2-theme1), -2px 2px 0 var(--key-shadow2-theme1), -3px 3px 0 var(--key-shadow2-theme1), -4px 4px 0 var(--key-shadow2-theme1);
     --box-sh-mb-yellow: -1px 1px 0 var(--key-shadow2-theme1), -2px 2px 0 var(--key-shadow2-theme1);
     --box-sd-mb-pressed-yellow: -1px 1px 0 var(--key-shadow2-theme1);
+
+    --box-sh-dk-blue: -1px 1px 0 var(--key-shadow1-theme1), -2px 2px 0 var(--key-shadow1-theme1), -3px 3px 0 var(--key-shadow1-theme1), -4px 4px 0 var(--key-shadow1-theme1);
+    --box-sh-mb-blue: -1px 1px 0 var(--key-shadow1-theme1), -2px 2px 0 var(--key-shadow1-theme1);
+    --box-sd-mb-pressed-blue: -1px 1px 0 var(--key-shadow1-theme1);
+
+    --box-sh-dk-red: -1px 1px 0 var(--key-shadow3-theme1), -2px 2px 0 var(--key-shadow3-theme1), -3px 3px 0 var(--key-shadow3-theme1), -4px 4px 0 var(--key-shadow3-theme1);
+    --box-sh-mb-red: -1px 1px 0 var(--key-shadow3-theme1), -2px 2px 0 var(--key-shadow3-theme1);
+    --box-sd-mb-pressed-red: -1px 1px 0 var(--key-shadow3-theme1);
 }
 
 @font-face {
@@ -58,6 +66,11 @@
 @font-face {
     font-family: 'League Spartan Semi-Bold';
     src: url(fonts/LeagueSpartan-SemiBold.ttf);
+}
+
+@font-face {
+    font-family: 'League Spartan Regular';
+    src: url(fonts/LeagueSpartan-Medium.ttf);
 }
 
 * {
@@ -97,19 +110,85 @@ body {
     grid-template-rows: repeat(3, 1fr);
 }
 
+.header_wrapper {
+    display: grid;
+    gap: calc(5px + 1vw);
+}
+
 .header {
     display: flex;
+    justify-content: space-between;
+    height: calc(30px + 2vw);
+    align-items: flex-end;
+    padding: 1vw;
+    color: var(--text2-theme1);
 }
 
 .theme_toggle {
     display: flex;
+    width: 60%;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.theme_logo {
+    font-size: calc(5px + 2vw);
+    text-align: right;
+    flex: 1;
+}
+
+.theme_wrapper {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 5px;
+    font-weight: 600;
+    font-family: 'League Spartan Regular';
+    letter-spacing: 6px;
+    font-size: 14px;
+}
+
+.toggle_switch {
+    background-color: var(--toggle-keypad-bg-theme1);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 65px;
+    height: 20px;
+    border-radius: 20px;
+}
+
+/* Toggle setup */
+
+.toggle_switch input[type="radio"]:not(:checked) + label {
+    opacity: 0;
+}
+
+.toggle_switch input[type="radio"] {
+    opacity: 0;
+    position: absolute;
+    width: 0; 
+}
+
+.toggle_switch label {
+    display: inline-block;
+    cursor: pointer;
+    padding: 7px;
+    border-radius: 50%;
+    background-color: var(--key-bg-toggle-theme1);
+}
+
+
+.logo {
+    font-size: var(--fs-2);
 }
 
 .screen {
     background-color: var(--screen-bg-theme1);
     padding-inline: calc(5px + 1vw);
     padding-block: calc(10px + 2vw);
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
 #inputField {
@@ -125,6 +204,7 @@ body {
 }
 
 .panel {
+    font-family: 'League Spartan';
     padding: calc(5px + 1vw);
     border-radius: 5px;
     display: grid;
@@ -147,6 +227,13 @@ button {
     background-color: var(--key-bg2-theme1);
     box-shadow: var(--box-sh-mb-yellow);
     transition: transform 0.1s, background-color 0.2s;
+    cursor: pointer;
+}
+
+.reset, .delete {
+    color: var(--text2-theme1);
+    background-color: var(--key-bg1-theme1);
+    box-shadow: var(--box-sh-mb-blue);
 }
 
 button:active {
@@ -154,11 +241,30 @@ button:active {
     transform: scale(0.9);
 }
 
+.reset:active, .delete:active {
+    box-shadow: var(--box-sd-mb-pressed-blue);
+}
+
+.equal {
+    color: var(--text2-theme1);
+    background-color: var(--key-bg-toggle-theme1);
+    box-shadow: var(--box-sh-mb-red);
+}
+.equal:active {
+    box-shadow: var(--box-sd-mb-pressed-red);
+}
+
 @media screen and (min-width: 500px) {
     .main {
         width: 400px;
         height: 600px;
         gap: 10px;
+    }
+    .header {
+        height: 50px;
+    }
+    .theme_logo {
+        font-size: 14px;
     }
     .screen {
         padding-inline: 15px;
@@ -178,7 +284,20 @@ button:active {
     button:active {
         box-shadow: var(--box-sh-mb-yellow);
     }
+    .reset, .delete {
+        box-shadow: var(--box-sh-dk-blue);
+    }
+    .reset:active, .delete:active {
+        box-shadow: var(--box-sh-mb-blue);
+    }
+    .equal {
+        box-shadow: var(--box-sh-dk-red);
+    }
+    .equal:active {
+        box-shadow: var(--box-sh-mb-red);
+    }
 }
+
 
 .attribution { 
     font-size: 11px; 
