--- a/launch-countdown-timer/style.css
+++ b/launch-countdown-timer/style.css
@@ -32,8 +32,9 @@
 body {
     font-family: 'Red Hat Bold';
     min-height: 100vh;
-    display: grid;
-    place-content: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-image: url(images/pattern-hills.svg), url(images/bg-stars.svg);
     background-repeat: no-repeat;
     background-position: bottom;
@@ -67,11 +68,48 @@ h1 {
     grid-template-columns: repeat(4, 20%);
 }
 
-.display_bg {
-    background-color: hsl(236, 20%, 17%);
+.section {
+    position: relative;
+}
+
+.line {
+    position: absolute;
+    z-index: 14;
+    top: 34%;
+    bottom: 68%;
+    left: 0;
+    right: 0;
+    border-top: 1px solid rgb(0,0,0,0.2);
+    border-bottom: 1px solid rgb(255,255,255,0.2);
+}
+
+.left, .right {
+    position: absolute;
+    z-index: 15;
+    width: 8px;
+    height: 12px;
+    background-color: black;
+    top: 31%;
+    bottom: 69%;
+    translate: -20%;
+}
+
+.left {
+    left: 0;
+    translate: -20%;
+    border-radius: 0 100px 100px 0;
+    border-left: 3px solid var(--body-bg);
+}
+
+.right {
+    right: 0;
+    translate: 20%;
+    border-radius: 100px 0 0 100px;
+    border-right: 3px solid var(--body-bg);
 }
 
 .display {
+    position: relative;
     background-color: var(--plates-bg);
     display: grid;
     place-content: center;
@@ -81,14 +119,69 @@ h1 {
     margin-bottom: 1rem;
     border-radius: 10px;
     box-shadow: 0 8px 0 rgb(0,0,0,0.2);
-    transition: transform 0.6s linear;
-    transform-origin: bottom center;
+    transition: all 0.3s ease-in-out; 
 }
 
-.display.fold {
-    transform: rotateX(-120deg) scale(0.9);
+.display::before {
+    box-sizing: content-box;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 50%;
+    background-color: var(--plates-bg);
+    border-top: 1px solid rgba(117, 110, 110, 0.4);
+    border-bottom: 1px solid rgb(117, 110, 110,0.4);
+    opacity: 0;
+    z-index: 10;
+    transform-origin: bottom center;
+    border-radius: 10px 10px 0 0;
   }
+  
+  @keyframes flipFromMiddle {
+    0% {
+        transform: perspective(1000px) rotateX(0deg);
+        opacity: 0; 
+    }
+    25% {
+        opacity: 1;
+    }
+    50% {
+        transform: perspective(1000px) rotateX(-180deg);
+        opacity: 1; 
+    }
+    75% {
+        opacity: 0;
+    }
+    100% {
+        transform: perspective(1000px) rotateX(0deg);
+        opacity: 0; 
+    }
+}
 
+.display.fold::before {
+    animation: flipFromMiddle 0.6s ease-in-out forwards;
+}
+
+.display::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--plates-bg);
+    border-radius: inherit;
+    opacity: 0; 
+    z-index: 2; 
+    transition: opacity 0s ease-in-out; 
+}
+
+.display.fold::after {
+    opacity: 1;
+}
+  
 .social_links {
     display: flex;
     justify-content: center;
@@ -114,4 +207,26 @@ h1 {
 }
 .attribution a { 
     color: hsl(228, 45%, 44%); 
+}
+
+@media screen and (max-width: 620px) {
+    .main_wrapper {
+        width: 90%;
+    }
+    .countdown_wrapper {
+        height: auto;
+    }
+    h1 {
+        font-size: 5vw;
+    }
+    .display {
+        font-size: 8vw;
+    }
+    .units {
+        font-size: 2vw;
+    }
+    .left, .right {
+        width: 6px;
+        height: 8px;
+    }
 }
