--- a/countdown-timer/style.css
+++ b/countdown-timer/style.css
@@ -81,7 +81,7 @@ h1 {
     left: 0;
     right: 0;
     border-top: 1px solid rgb(0,0,0,0.2);
-    border-bottom: 1px solid rgb(255,255,255,0.2);
+    border-bottom: 1px solid rgb(255,255,255,0.1);
 }
 
 .left, .right {
@@ -121,6 +121,7 @@ h1 {
     border-radius: 10px;
     box-shadow: 0 8px 0 rgb(0,0,0,0.2);
     transition: all 0.3s ease-in-out; 
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.25) 0%, rgba(0, 0, 0, 0.15) 50%, rgba(0, 0, 0, 0) 50%);
 }
 
 .display::before {
